--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,400;0,500;0,700;1,100&display=swap");
 
 * {
   box-sizing: border-box;
@@ -8,7 +8,7 @@
 
 body {
   background-color: #c0c0c0;
-  font-family: "Lato", sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 120%;
 }
 
@@ -19,6 +19,10 @@ body {
   background-color: #ffffffff;
   border-radius: 5px;
   box-shadow: 0px 1px 31px 2px rgba(232, 223, 232, 0.5);
+}
+
+.form_container {
+  margin-bottom: 0.5rem;
 }
 
 input {
@@ -70,9 +74,9 @@ input:focus {
 }
 
 .header_content h5 {
-  font-weight: 900;
+  font-weight: 700;
   margin: 0.2rem 0;
-  font-size: 1.7rem;
+  font-size: 1.2rem;
 }
 
 .header_content button {
